--- a/views/index.pug
+++ b/views/index.pug
@@ -1,17 +1,17 @@
 doctype html
 html(lang='en-GB')
   head
-    title FLO Blockchain: tZERO DLR Records
+    title FLO Blockchain: Teton County Records
 
     link(rel="stylesheet" type="text/css" href="style.css")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     link(rel="icon" href="favicon-v2.png")
-    meta(property="og:title" content="FLO Blockchain: tZERO DLR Records")
+    meta(property="og:title" content="FLO Blockchain: Teton County Records")
     meta(property="og:site_name" content="FLO Blockchain")
-    meta(property="og:url" content="https://floblockchain.org/tzero/")
+    meta(property="og:url" content="https://landrecords.mediciland.com")
     meta(
         property="og:description"
-        content="Explore the most recent tZERO DLR records in the FLO Blockchain using this floData explorer."
+        content="Explore the most recent Teton County records in the FLO Blockchain using this floData explorer."
     )
     meta(property="og:type" content="website")
     meta(property="og:image" content="https://floblockchain.org/FLO.png")
@@ -23,7 +23,7 @@ html(lang='en-GB')
     div(style="text-align:center;")
       img(src="FLO.png" alt="FLO")
       div(class="floblockchain-text top")
-        h3 Recent tZERO DLR Records
+        h3 Recent Teton County Records
         a(id="top-link" href="#whats-this") Learn More
 
     table(id="tbl")
@@ -46,10 +46,10 @@ html(lang='en-GB')
             a(href=("http://network.flo.cash/block/" + tx.tx.blockhash) target="_blank") #{tx.tx.blockhash.substring(0, 6) + "..."}
     div(class="floblockchain-text")
       h2(id="whats-this") About
-      p These are the recent tZERO DLRs recorded in the FLO blockchain. Click on the txid or block hash to navigate to the explorer for further research and verification of individual DLR records.
-      h3 tZERO DLR
-      p A DLR (Digital Locate Receipt) is a digitized version of a traditional REG SHO locate. tZERO’s DLR platform captures all inventory and audit trail information and stores that information permanently on the blockchain.
-      p Learn more about the tZERO DLR system here: [#[a(href="https://www.youtube.com/watch?v=VjM-m8IZrT0") YouTube]]
+      p These are the recent Teton Countys recorded in the FLO blockchain. Click on the txid or block hash to navigate to the explorer for further research and verification of individual records.
+      h3 Teton County
+      p The Medici Land Governance Teton County Blockchain Pilot records warranty deeds, mortgages, releases, liens and so on from 1996 to the present.
+      p Learn more about the Teton County system here: [#[a(href="https://youtu.be/S9Zf12bhvwA") YouTube]]
       h3 How was it made?
       p This page was created using #[a(href="https://github.com/oipwg/js-oip") js-oip], a nodejs library that allows you to interact with the Open Index Protocol and the FLO blockchain. The js-oip package is also available on #[a(href="https://www.npmjs.com/package/js-oip") npm].
       p [#[a(href="#top") Back to top]]
